Fixed refresh token since i notices, changed order modal font to align with other fonts and made improvements to providerReviewModal

--- a/src/components/Car/Modal.css
+++ b/src/components/Car/Modal.css
@@ -24,3 +24,14 @@
 .close {
     cursor: pointer;
 }
+
+.modal-content {
+    gap: 10px;
+}
+
+.modal-header {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
