--- a/src/static/css/index.css
+++ b/src/static/css/index.css
@@ -98,6 +98,7 @@ img {
 p {
     color: var(--text-color);
     font-size: 1.5em;
+    font-family: var(--main-font);
 }
 
 strong {
@@ -270,7 +271,6 @@ label:not(li label) > input[placeholder=" "]:not(:focus):placeholder-shown + spa
     box-sizing: border-box;
     width: 100%;
     flex-direction: column;
-    gap: 5px;
     padding: 10px;
 
     border-radius: var(--corner-rounding);
